<resources>
    <string name="app_name">Sample Reservation System</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="railway_reservation">Railway Reservation</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Registered Users</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_security_hint">Enter your security hint</string>
    <string name="security_hint">Security Hint</string>
    <string name="your_password">Your Password</string>
    <string name="get_password">Get Password</string>
    <string name="cancel">Cancel</string>
    <string name="error_message_security_hint">Please Enter Valid security Hint</string>
    <string name="admin_rights">Admin Rights</string>
    <string name="camera_image">camera</string>
    <string name="take_a_new_photo">Take A new Photo</string>
    <string name="gallery_image">Gallery</string>
    <string name="choose_photo_from_gallery">Choose Image From Gallery</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">sonu@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_log_out">Log Out</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="error_message_contact">Please Fill the contact information</string>
    <string name="new_booking">New Booking</string>
    <string name="booking_history">Booking History</string>
    <string name="profile_action">Profile Action</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="approve_new_users">Approve New Users</string>
    <string name="add_update_delete_trains">ADD UPDATE DELETE TRAINS</string>
    <string name="block_users">BLOCK USERS</string>
    <string name="update_pnr_requests">Update PNR Requests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="approve">Approve</string>
    <string name="yet_to_approve_string">Your Id is yet to be approved by admin, please wait for sometime and try again</string>
    <string name="blocked_message">Admin Has blocked you</string>
    <string name="error_invalid_name">Please Enter valid name</string>
    <string name="error_invalid_password_5">Your password should be atleast 5 characters</string>
    <string name="error_message_contact_valid">Mobile number should be 10 digits number</string>
    <string name="blocked_id_message">This Id is blocked!</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="we_did_not_found_record">We didn\'t found any records with This email and security hint</string>
    <string name="invalid_email_login_hint">Please Enter Valid email</string>
    <string name="email_or_hint_empty">Email or hint can\'t be empty</string>
    <string name="block">Block</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_user_dialog_title">Delete user?</string>
    <string name="delete_dialog_message">User will be removed from database.</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="blocked_string">Blocked</string>
    <string name="unblocked_string">Unblocked</string>
    <string name="can_not_block_admin">You can not block admin</string>
    <string name="can_not_delete_admin">You can not delete admin</string>
    <string name="please_enter_train_number">Please Enter Train Number</string>
    <string name="please_enter_train_name">Please Enter train Name</string>
    <string name="add_train">Add Train</string>
    <string name="please_enter_no_of_seats">Please Enter No of seats</string>
    <string name="empty_layout">Empty Layout</string>
    <string name="no_users_to_approve_here">No Users to approve here</string>
    <string name="no_trains_added_yet">No trains added yet</string>
    <string name="train_no">Train No</string>
    <string name="train_name">Train Name</string>
    <string name="no_of_seats">No of Seats</string>
    <string name="update_train_details">Update Train Details</string>
    <string name="delete_this_train">Delete This Train</string>
    <string name="ask_delete_this_train">Delete This train</string>
    <string name="delete_train_message">This action will delete train from database</string>
    <string name="number_of_booked_seats">Number of Booked seats</string>
    <string name="user_booking_history">User Booking History</string>
    <string name="select_date">Click here and select Date</string>
    <string name="enter_number_of_seats">Enter Number of Seats</string>
    <string name="book_seats">Book Seats</string>
    <string name="no_of_seats_available">seats Available</string>
    <string name="select_journey_date">Select the journey date</string>
    <string name="clicked_toast">Clicked</string>
    <string name="please_enter_number_of_seats">Please Enter Number of seats</string>
    <string name="please_enter_valid_number_of_seats">Please Enter Valid Number of seats</string>
    <string name="please_select_train">Please select the train</string>
    <string name="not_enough_seats">Not Enough Seats in this train</string>
    <string name="pnr">PNR</string>
    <string name="date">Date</string>
    <string name="train">Train</string>
    <string name="seats">Seats</string>
    <string name="valid_contact_error">Please Enter Valid contact number</string>
    <string name="please_select_image">Please Select Image</string>
    <string name="please_select_gender">Please Select Gender</string>
    <string name="registering_please_wait">Registering Please wait…</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="admin">Admin</string>
    <string name="update">Update</string>
</resources>
