<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_approve_new_users"
            android:icon="@drawable/ic_new"
            android:title="@string/approve_new_users" />
        <item
            android:id="@+id/nav_trains_menu"
            android:icon="@drawable/ic_playlist_add"
            android:title="@string/add_update_delete_trains" />
        <item
            android:id="@+id/nav_block_users"
            android:icon="@drawable/ic_block"
            android:title="@string/block_users" />
        <item
            android:id="@+id/nav_update_pnr_requests"
            android:icon="@drawable/ic_update"
            android:title="@string/update_pnr_requests" />
    </group>

    <item android:title="@string/profile_action">
        <menu>
            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_edit"
                android:title="@string/edit_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
