<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/forget_password_bg">

    <LinearLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_10" >
        <TextView
            android:id="@+id/tv_enter_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email" />

        <EditText
            android:id="@+id/email_hint_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:padding="@dimen/margin_5" />

        <TextView
            android:id="@+id/tv_enter_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_security_hint" />

        <EditText
            android:id="@+id/security_hint_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:hint="@string/security_hint"
            android:inputType="text"
            android:ems="10"
            android:padding="@dimen/margin_5" />

        <TextView
            android:id="@+id/tv_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/your_password" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/get_password_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_size_40"
            android:padding="@dimen/padding_5"
            android:layout_margin="@dimen/margin_10"
            android:background="@color/button_green"
            android:text="@string/get_password" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_size_40"
            android:background="@color/button_green"
            android:layout_margin="@dimen/margin_10"
            android:padding="@dimen/padding_5"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>