<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddTrainFragment"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_10">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/train_no"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        android:id="@+id/tv_train_no"
        android:textColor="@android:color/black"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_no_of_seats"
            android:inputType="numberSigned"
            android:id="@+id/tie_enter_no_of_seats"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_train_name"
            android:id="@+id/tie_enter_train_name"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:background="@color/colorPrimary"
        android:id="@+id/btn_update_train"
        android:text="@string/update_train_details"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:background="@color/colorAccent"
        android:id="@+id/btn_delete_train"
        android:text="@string/delete_this_train"/>

</LinearLayout>