<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.UserBookingHistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:id="@+id/ll_headings"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tv_pnr"
            android:text="@string/pnr"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tv_date"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/train"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:id="@+id/tv_train_name" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seats"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:id="@+id/tv_no_of_seats" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:id="@+id/booking_history_recycler"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/user_booking_history"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/tv_empty_layout"
        android:textSize="@dimen/text_size_24"
        android:textColor="@android:color/black"/>
</LinearLayout>