<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_10"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardElevation="@dimen/margin_10"
    android:layout_margin="@dimen/margin_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:layout_marginStart="@dimen/margin_15"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/block_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_gravity="center"
            android:text="@string/block"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_gravity="center"
            android:text="@string/delete_user"
            android:id="@+id/delete_button"
            android:background="@android:color/holo_red_light"/>
    </LinearLayout>
</android.support.v7.widget.CardView>